<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Silver"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".M0501">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/m0501_t001"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/m0501_t001"
            android:textColor="@color/Navy"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/m0501_s001"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/m0501_a001"
            android:prompt="@string/m0501_s001"
            android:spinnerMode="dialog" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin">

        <TextView
            android:id="@+id/m0501_t002"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/m0501_t002"
            android:textColor="@color/Navy"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/m0501_e001"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/hint"
            android:importantForAutofill="no"
            android:inputType="number" />
    </TableRow>

    <Button
        android:id="@+id/m0501_b001"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:backgroundTint="@color/Yellow"
        android:text="@string/m0501_b001"
        android:textColor="@color/Red"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/m0501_t003"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/m0501_t003"
        android:textColor="@color/Red"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/m0501_f000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m0501_f000"
        android:textColor="@color/Gray"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/m0501_t004"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="end"
        android:text="@string/m0501_t004"
        android:textColor="@color/Navy"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>